-- Version 2.15.16, released ...

 * Allow plants to be placed on mud

-- Version 2.15.15, released 7-12-2022

 * The Custom Layers tab of the Exporting screen now has Enable and Disable buttons to quickly select or deselect all selected layers for Export
 * Bug fix: use correct Custom Biome names when exporting Custom Cave/Tunnel Layers with Floor Dimensions
 * Bug fix: make adding ceiling dimensions to worlds with non-standard build heights work
 * Various bug fixes and usability improvements

-- Version 2.15.14, released 2-12-2022

 * The Import Mask screen (Edit -> Import -> Mask as terrain or layer...) has been made more powerful and easier to use:
   + Many more mappings are now possible, for example:
     - On/off layers (e.g. Frost or Custom Ground Cover layers) can now be mapped from a grey scale image by dithering or applying a threshold
     - One-bit masks can now be used to set a single terrain type, or an individual value or intensity of any layer
   + Usability has been improved by allowing selection of all layers and values and then restricting the available mappings, or explaining why no mappings are available, rather than restricting the available selections without explanation
 * The Add/Remove Tiles screen now has scrollbars, and additionally is initialised to the same location as the current editor view
 * Various bug fixes and usability improvements

-- Version 2.15.13, released 23-11-2022

 * Multiple overlay images may now be configured
   + The overlay images are configured from the Configure View screen (View menu, or press Ctrl+V (on Windows) or ⌘+V (on Mac))
   + They can be disabled and enabled separately
   + The existing "Enable or disable image overlay(s)" toolbar button now shows or hides all enabled overlays
     - The exception is if no overlays are enabled. If there is one overlay configured and it is disabled, it will be enabled. In all other cases the Configure View screen will be opened