@@ -1,6 +1,7 @@
 -- Version 2.15.16, released ...
 
  * Allow plants to be placed on mud
+ * Bug fix: don't crash when a ceiling dimension has tiles where the surface does no
 
 -- Version 2.15.15, released 7-12-2022
 
